--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.16.1",
     "deck.gl": "^9.0.0",
     "maplibre-gl": "^3.0.0",
+    "openai": "^4.33.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-map-gl": "^7.1.0",
