--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "prettier": "^3.2.5",
     "sass": "^1.74.1",
     "typescript": "^4.6.0",
     "vite": "^4.0.0"
